--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -266,16 +266,16 @@
     }
   </style>
 
-  <div style="border-bottom: 2px solid #0c2340; padding-bottom: 20px; margin-bottom: 40px; text-align: center;">
+ <div style="border-bottom: 2px solid #0c2340; padding-bottom: 20px; margin-bottom: 40px; text-align: center;">
     <h1 style="margin: 0; color: #0c2340; font-size: 26px; letter-spacing: 2px; font-weight: 900; text-transform: uppercase;">
-      JOSHUA HONG : PERFORMANCE LOG
+      JOSHUA HONG : On-going Tournament
     </h1>
   </div>
 
   <div class="live-event-card">
     <div style="padding: 20px 25px; display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap; gap: 10px;">
       <div style="display: flex; align-items: center; gap: 12px;">
-        <span style="background: #e74c3c; color: white; padding: 4px 14px; border-radius: 50px; font-size: 10px; font-weight: 900; letter-spacing: 1px; animation: pulse 2.5s infinite;">IN PROGRESS</span>
+        <span style="background: #e74c3c; color: white; padding: 4px 14px; border-radius: 50px; font-size: 10px; font-weight: 900; letter-spacing: 1px; animation: pulse 2s infinite;">IN PROGRESS</span>
         <h2 style="color: #0c2340; margin: 0; font-size: 22px; font-weight: 800;">Cancun Collegiate Qualifying</h2>
       </div>
       <div style="font-size: 12px; color: #95a5a6; font-weight: 600; text-transform: uppercase; letter-spacing: 1px;">Jan 2026 Season</div>
@@ -394,12 +394,12 @@
       </div>
     </div>
   </div>
-</div>
 
 <style>
+  /* 깜빡이는 효과를 정의하는 CSS입니다 */
   @keyframes pulse {
     0% { opacity: 1; }
-    50% { opacity: 0.6; }
+    50% { opacity: 0.3; } /* 조금 더 확실히 깜빡이게 opacity를 0.3으로 조정했습니다 */
     100% { opacity: 1; }
   }
 </style>
@@ -410,8 +410,18 @@
 
 
 
+  
 <div class="performance-log-section" style="max-width: 900px; margin: 0 auto 60px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
-
+  
+  <div style="border-bottom: 2px solid #0c2340; padding-bottom: 20px; margin-bottom: 40px; text-align: center;">
+    <h1 style="margin: 0; color: #0c2340; font-size: 26px; letter-spacing: 2px; font-weight: 900; text-transform: uppercase;">
+      JOSHUA HONG : PERFORMANCE LOG
+    </h1>
+    <p style="margin: 8px 0 0; color: #7f8c8d; font-size: 14px; font-weight: 500; letter-spacing: 1px;">
+      Official Tournament Schedule
+    </p>
+  </div>
+  
   <style>
     /* 테이블 기본 구조 (데스크탑) */
     .log-table { width: 100%; border-collapse: collapse; background: white; table-layout: fixed; margin-bottom: 0; border: none; }
