--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -268,7 +268,7 @@
 
  <div style="border-bottom: 2px solid #0c2340; padding-bottom: 20px; margin-bottom: 40px; text-align: center;">
     <h1 style="margin: 0; color: #0c2340; font-size: 26px; letter-spacing: 2px; font-weight: 900; text-transform: uppercase;">
-      JOSHUA HONG : On-going Tournament
+      On-going Tournament
     </h1>
   </div>
 
@@ -415,7 +415,7 @@
   
   <div style="border-bottom: 2px solid #0c2340; padding-bottom: 20px; margin-bottom: 40px; text-align: center;">
     <h1 style="margin: 0; color: #0c2340; font-size: 26px; letter-spacing: 2px; font-weight: 900; text-transform: uppercase;">
-      JOSHUA HONG : PERFORMANCE LOG
+      PERFORMANCE LOG
     </h1>
     <p style="margin: 8px 0 0; color: #7f8c8d; font-size: 14px; font-weight: 500; letter-spacing: 1px;">
       Official Tournament Schedule
