--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -275,7 +275,10 @@
   <div class="live-event-card">
     <div style="padding: 20px 25px; display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap; gap: 10px;">
       <div style="display: flex; align-items: center; gap: 12px;">
-        <span style="background: #e74c3c; color: white; padding: 4px 14px; border-radius: 50px; font-size: 10px; font-weight: 900; letter-spacing: 1px; animation: pulse 2s infinite;">IN PROGRESS</span>
+        <span style="background: #e74c3c; color: white; padding: 4px 14px; border-radius: 50px; font-size: 10px; font-weight: 900; letter-spacing: 1px; display: flex; align-items: center; gap: 6px;">
+          <span style="width: 8px; height: 8px; background: white; border-radius: 50%; animation: pulse 1.5s infinite;"></span>
+          IN PROGRESS
+        </span>
         <h2 style="color: #0c2340; margin: 0; font-size: 22px; font-weight: 800;">Cancun Collegiate Qualifying</h2>
       </div>
       <div style="font-size: 12px; color: #95a5a6; font-weight: 600; text-transform: uppercase; letter-spacing: 1px;">Jan 2026 Season</div>
@@ -394,13 +397,14 @@
       </div>
     </div>
   </div>
+</div>
 
 <style>
-  /* 깜빡이는 효과를 정의하는 CSS입니다 */
+  /* 불빛만 깜빡이게 만드는 애니메이션 정의 */
   @keyframes pulse {
-    0% { opacity: 1; }
-    50% { opacity: 0.3; } /* 조금 더 확실히 깜빡이게 opacity를 0.3으로 조정했습니다 */
-    100% { opacity: 1; }
+    0% { opacity: 1; transform: scale(1); }
+    50% { opacity: 0.2; transform: scale(0.8); }
+    100% { opacity: 1; transform: scale(1); }
   }
 </style>
 
