--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -299,8 +299,8 @@
           <tr style="background: rgba(231, 76, 60, 0.02);">
             <td class="col-left">
               <div style="font-weight: 600; font-size: 13px; color: #e74c3c;">Jan 22, 2026</div>
-              <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Round 1: The Canyons Course</div>
-              <div style="font-size: 12px; color: #7f8c8d;">TPC San Antonio (Par 72)</div>
+              <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Round 1: The Canyons Course (Par 72)</div>
+              <div style="font-size: 12px; color: #7f8c8d;">TPC San Antonio </div>
 <button type="button" 
         onclick="document.getElementById('scorecard-modal').style.display='flex'"
         style="cursor: pointer; display: inline-flex; align-items: center; margin-top: 8px; padding: 5px 12px; background: #ffffff; color: #0c2340; font-family: inherit; font-size: 11px; font-weight: 800; border-radius: 6px; border: 1.5px solid #0c2340; transition: all 0.2s; box-shadow: 0 2px 4px rgba(0,0,0,0.05);">
@@ -337,8 +337,8 @@
           <tr>
             <td class="col-left">
               <div style="font-weight: 600; font-size: 13px;">Jan 23, 2026</div>
-              <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Round 2: The Oaks Course</div>
-              <div style="font-size: 12px; color: #7f8c8d;">TPC San Antonio (Par 72)</div>
+              <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Round 2: The Oaks Course (Par 72)</div>
+              <div style="font-size: 12px; color: #7f8c8d;">TPC San Antonio </div>
               <div class="mobile-status-bar">
                 <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value">-</span></div>
                 <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value">-</span></div>
@@ -354,8 +354,8 @@
           <tr>
             <td class="col-left">
               <div style="font-weight: 600; font-size: 13px;">Jan 26, 2026</div>
-              <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Round 3: The Canyons Course</div>
-              <div style="font-size: 12px; color: #7f8c8d;">TPC San Antonio (Par 72)</div>
+              <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Round 3: The Canyons Course (Par 72)</div>
+              <div style="font-size: 12px; color: #7f8c8d;">TPC San Antonio </div>
               <div class="mobile-status-bar">
                 <div class="ms-item" style="border:none;"><span class="ms-label">STATUS</span><span class="ms-value scheduled-text">Scheduled</span></div>
               </div>
@@ -368,8 +368,8 @@
           <tr>
             <td class="col-left">
               <div style="font-weight: 600; font-size: 13px;">Jan 27, 2026</div>
-              <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Round 4: The Oaks Course</div>
-              <div style="font-size: 12px; color: #7f8c8d;">TPC San Antonio (Par 72)</div>
+              <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Round 4: The Oaks Course (Par 72)</div>
+              <div style="font-size: 12px; color: #7f8c8d;">TPC San Antonio </div>
               <div class="mobile-status-bar">
                 <div class="ms-item" style="border:none;"><span class="ms-label">STATUS</span><span class="ms-value scheduled-text">Scheduled</span></div>
               </div>
