--- a/index.html
+++ b/index.html
@@ -204,6 +204,49 @@
     <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); font-size: clamp(40px, 10vw, 80px); font-weight: 900; color: rgba(12, 35, 64, 0.04); white-space: nowrap; z-index: 1; pointer-events: none; letter-spacing: -2px;">
       ELITE PERFORMANCE
     </div>
+
+
+<div style="max-width: 900px; margin: 0 auto 30px; padding: 0 15px; box-sizing: border-box;">
+  <div style="background: #ffffff; border: 2px solid #0c2340; border-radius: 12px; padding: 15px 20px; display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap; gap: 15px; box-shadow: 0 10px 25px rgba(12,35,64,0.08);">
+    
+    <div style="display: flex; align-items: center; gap: 12px;">
+      <span style="background: #e74c3c; color: white; padding: 4px 12px; border-radius: 50px; font-size: 10px; font-weight: 900; letter-spacing: 1px; display: flex; align-items: center; gap: 6px;">
+        <span style="width: 7px; height: 7px; background: white; border-radius: 50%; animation: pulse 1.5s infinite;"></span>
+        LIVE
+      </span>
+      <div style="color: #0c2340; font-weight: 800; font-size: 14px; letter-spacing: -0.2px;">
+        Cancun Collegiate Qualifying
+      </div>
+    </div>
+
+    <div style="display: flex; align-items: center; gap: 20px;">
+      <div style="text-align: center;">
+        <span style="display: block; font-size: 9px; color: #95a5a6; font-weight: 800;">R1 SCORE</span>
+        <span style="font-size: 16px; font-weight: 900; color: #0c2340;">68 <span style="color: #e74c3c;">(-4)</span></span>
+      </div>
+      <div style="width: 1px; height: 25px; background: #eee;"></div>
+      <div style="text-align: center;">
+        <span style="display: block; font-size: 9px; color: #95a5a6; font-weight: 800;">RANK</span>
+        <span style="font-size: 16px; font-weight: 900; color: #0c2340;">T1</span>
+      </div>
+    </div>
+
+    <a href="ncaa-stats.html" style="text-decoration: none; background: #0c2340; color: white; padding: 8px 16px; border-radius: 6px; font-size: 11px; font-weight: 800; transition: all 0.2s; display: flex; align-items: center; gap: 5px;">
+      MORE INFO <span>&rarr;</span>
+    </a>
+  </div>
+</div>
+
+<style>
+  @keyframes pulse {
+    0% { opacity: 1; transform: scale(1); }
+    50% { opacity: 0.2; transform: scale(0.8); }
+    100% { opacity: 1; transform: scale(1); }
+  }
+</style>
+
+
+
     
     <div style="position: relative; z-index: 2;">
       <span style="display: block; font-size: 13px; color: #c98a2e; font-weight: 800; letter-spacing: 4px; margin-bottom: 8px; text-transform: uppercase;">
