--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
     <div style="display: flex; align-items: center; gap: 12px;">
       <span style="background: #e74c3c; color: white; padding: 4px 12px; border-radius: 50px; font-size: 10px; font-weight: 900; letter-spacing: 1px; display: flex; align-items: center; gap: 6px;">
         <span style="width: 7px; height: 7px; background: white; border-radius: 50%; animation: pulse 1.5s infinite;"></span>
-        LIVE
+        IN PROGRESS
       </span>
       <div style="color: #0c2340; font-weight: 800; font-size: 14px; letter-spacing: -0.2px;">
         Cancun Collegiate Qualifying
