--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     <div style="display: flex; align-items: center; gap: 20px;">
       <div style="text-align: center;">
         <span style="display: block; font-size: 9px; color: #95a5a6; font-weight: 800;">R1 SCORE</span>
-        <span style="font-size: 16px; font-weight: 900; color: #0c2340;">68 <span style="color: #e74c3c;">(-4)</span></span>
+        <span style="font-size: 16px; font-weight: 900; color: #e74c3c;">68 <span style="color: #e74c3c;">(-4)</span></span>
       </div>
       <div style="width: 1px; height: 25px; background: #eee;"></div>
       <div style="text-align: center;">
