--- a/junior-career.html
+++ b/junior-career.html
@@ -117,7 +117,7 @@
 
 <body>
   <div class="sticky-top">
-    <div class="top-bar">OFFICIAL WEBSITE OF JOSHUA HONG | UTSA GOLF</div>
+    <div class="top-bar">OFFICIAL WEBSITE OF JOSHUA HONG | UTSA </div>
     <header class="header-wrapper">
       <button class="menu-toggle" onclick="toggleMenu()">☰</button>
       
