--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         IN PROGRESS
       </span>
       <div style="color: #0c2340; font-weight: 800; font-size: 14px; letter-spacing: -0.2px;">
-        Cancun Collegiate Qualifying
+        Compadres Collegiate (UTRGV) Qualifying
       </div>
     </div>
 
