--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1032,7 +1032,7 @@
       <div style="border: 1px solid #e2e8f0; border-radius: 12px; overflow: hidden; background: #ffffff; box-shadow: 0 4px 12px rgba(0,0,0,0.05);">
         <div style="background: #0c2340; color: white; padding: 8px 0; font-size: 11px; font-weight: 800; text-align: center; letter-spacing: 1px;">IRON</div>
         <div style="position: relative; width: 100%; padding-top: 177.78%; background: #000;">
-          <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://www.youtube.com/embed/kHn_a7RscFM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://www.youtube.com/embed/uOPnTvP4-94" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </div>
       
@@ -1045,13 +1045,14 @@
       
       <div style="border: 1px solid #e2e8f0; border-radius: 12px; overflow: hidden; background: #ffffff; box-shadow: 0 4px 12px rgba(0,0,0,0.05);">
         <div style="background: #0c2340; color: white; padding: 8px 0; font-size: 11px; font-weight: 800; text-align: center; letter-spacing: 1px;">PUTTING</div>
-        <div style="position: relative; width: 100%; padding-top: 177.78%; background: #f8fafc;">
-          <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; color: #94a3b8; font-size: 11px; font-weight: 600;">READY</div>
+        <div style="position: relative; width: 100%; padding-top: 177.78%; background: #000;">
+          <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://www.youtube.com/embed/RI_5PyVxIuc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </div>
     </div>
   </div>
 </div>
+  
 
 <div class="tech-gear-section" style="max-width: 900px; margin: 0 auto 60px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
 
