--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -384,7 +384,7 @@
       <div style="color: rgba(255,255,255,0.7); font-size: 12px; font-weight: 600; text-transform: uppercase; letter-spacing: 1px;">Current Stats</div>
       <div style="display: flex; gap: 25px; align-items: center;">
         <div style="text-align: right; padding-right: 20px; border-right: 1px solid rgba(255,255,255,0.1);">
-          <span style="color: rgba(255,255,255,0.6); font-size: 10px; font-weight: 800; display: block;">TOTAL</span>
+          <span style="color: rgba(255,255,255,0.6); font-size: 10px; font-weight: 800; display: block;">R1-R2-R3-R4</span>
           <span style="color: #e74c3c; font-size: 20px; font-weight: 900;">68</span>
         </div>
         <div style="text-align: right; padding-right: 20px; border-right: 1px solid rgba(255,255,255,0.1);">
