--- a/junior-career.html
+++ b/junior-career.html
@@ -393,11 +393,11 @@
       </div>
 
       <div style="background: #f1f4f9; padding: 25px; border-radius: 15px; border: 1px solid #d1d9e6; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.03);">
-        <div style="font-size: 13px; color: #7f8c8d; text-transform: uppercase; font-weight: bold; letter-spacing: 1px;">JGS (Class of 2025)</div>
-        <div style="font-size: 32px; font-weight: 800; color: #0c2340; margin: 10px 0;">#42 RANK</div>
+        <div style="font-size: 13px; color: #7f8c8d; text-transform: uppercase; font-weight: bold; letter-spacing: 1px;">Mexico Overall</div>
+        <div style="font-size: 32px; font-weight: 800; color: #0c2340; margin: 10px 0;">#1 RANK</div>
         <div style="font-size: 12px; color: #555; line-height: 1.6;">
           General Ranking: #100<br>
-          <span style="font-weight: bold; color: #1b5e20;">Mexico Overall: #1</span>
+          <span style="font-weight: bold; color: #1b5e20;">JGS (Class of 2025): #42</span>
         </div>
       </div>
 
