--- a/index.html
+++ b/index.html
@@ -222,12 +222,12 @@
     <div style="display: flex; align-items: center; gap: 20px;">
       <div style="text-align: center;">
         <span style="display: block; font-size: 9px; color: #95a5a6; font-weight: 800;">R1-R2-R3-R4, Par</span>
-        <span style="font-size: 16px; font-weight: 900; color: #e74c3c;">68 <span style="color: #e74c3c;">(-4)</span></span>
+        <span style="font-size: 16px; font-weight: 900; color: #e74c3c;">68-69 <span style="color: #e74c3c;">(-7)</span></span>
       </div>
       <div style="width: 1px; height: 25px; background: #eee;"></div>
       <div style="text-align: center;">
         <span style="display: block; font-size: 9px; color: #95a5a6; font-weight: 800;">RANK</span>
-        <span style="font-size: 16px; font-weight: 900; color: #0c2340;">T1</span>
+        <span style="font-size: 16px; font-weight: 900; color: #0c2340;">1</span>
       </div>
     </div>
 
