--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -337,16 +337,16 @@
               <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Round 2: The Oaks Course (Par 72)</div>
               <div style="font-size: 12px; color: #7f8c8d;">TPC San Antonio </div>
               <div class="mobile-status-bar">
-                <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value">-</span></div>
-                <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value">-</span></div>
-                <div class="ms-item"><span class="ms-label">STATUS</span><span class="ms-value today-text">Today</span></div>
-                <div class="ms-item"><span class="ms-label">FINISH</span><span class="ms-value">-</span></div>
+                <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value">69</span></div>
+                <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value">-3</span></div>
+                <div class="ms-item"><span class="ms-label">STATUS</span><span class="ms-value today-text">Final</span></div>
+                <div class="ms-item"><span class="ms-label">FINISH</span><span class="ms-value">2</span></div>
               </div>
             </td>
-            <td class="hide-mobile" style="color: #bdc3c7;">-</td>
-            <td class="hide-mobile" style="color: #bdc3c7;">-</td>
-            <td class="hide-mobile today-text">Today</td>
-            <td class="hide-mobile" style="color: #bdc3c7;">-</td>
+            <td class="hide-mobile" style="color: #bdc3c7;">69</td>
+            <td class="hide-mobile" style="color: #bdc3c7;">-3</td>
+            <td class="hide-mobile today-text">Final</td>
+            <td class="hide-mobile" style="color: #bdc3c7;">2</td>
           </tr>
           <tr>
             <td class="col-left">
@@ -385,15 +385,15 @@
       <div style="display: flex; gap: 25px; align-items: center;">
         <div style="text-align: right; padding-right: 20px; border-right: 1px solid rgba(255,255,255,0.1);">
           <span style="color: rgba(255,255,255,0.6); font-size: 10px; font-weight: 800; display: block;">R1-R2-R3-R4</span>
-          <span style="color: #e74c3c; font-size: 20px; font-weight: 900;">68</span>
+          <span style="color: #e74c3c; font-size: 20px; font-weight: 900;">68-69</span>
         </div>
         <div style="text-align: right; padding-right: 20px; border-right: 1px solid rgba(255,255,255,0.1);">
           <span style="color: rgba(255,255,255,0.6); font-size: 10px; font-weight: 800; display: block;">PAR</span>
-          <span style="color: #e74c3c; font-size: 20px; font-weight: 900;">-4</span>
+          <span style="color: #e74c3c; font-size: 20px; font-weight: 900;">-7</span>
         </div>
         <div style="text-align: right;">
           <span style="color: rgba(255,255,255,0.6); font-size: 10px; font-weight: 800; display: block;">RANK</span>
-          <span style="color: #ffffff; font-size: 20px; font-weight: 900;">T1</span>
+          <span style="color: #ffffff; font-size: 20px; font-weight: 900;">1</span>
         </div>
       </div>
     </div>
