--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -337,16 +337,16 @@
               <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Round 2: The Oaks Course (Par 72)</div>
               <div style="font-size: 12px; color: #7f8c8d;">TPC San Antonio </div>
               <div class="mobile-status-bar">
-                <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value">69</span></div>
-                <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value">-3</span></div>
-                <div class="ms-item"><span class="ms-label">STATUS</span><span class="ms-value today-text">Final</span></div>
+                <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value under-par">69</span></div>
+                <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value under-par">-3</span></div>
+                <div class="ms-item"><span class="ms-label">STATUS</span><span class="ms-value">Final</span></div>
                 <div class="ms-item"><span class="ms-label">FINISH</span><span class="ms-value">2</span></div>
               </div>
             </td>
-            <td class="hide-mobile" style="color: #bdc3c7;">69</td>
-            <td class="hide-mobile" style="color: #bdc3c7;">-3</td>
-            <td class="hide-mobile today-text">Final</td>
-            <td class="hide-mobile" style="color: #bdc3c7;">2</td>
+            <td class="hide-mobile"><span class="under-par" style="font-size: 16px;">69</span></td>
+            <td class="hide-mobile"><span class="under-par" style="font-size: 16px;">-3</span></td>
+            <td class="hide-mobile" style="font-weight: 700; font-size: 13px;">Final</td>
+            <td class="hide-mobile" style="font-weight: 800; font-size: 16px;">2</td>
           </tr>
           <tr>
             <td class="col-left">
