--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -29,7 +29,7 @@
       background: #ffffff; box-shadow: 0 2px 10px rgba(0,0,0,0.05);
     }
     .top-bar {
-      background-color: #5a4a08; color: white; text-align: center;
+      background-color: #F15A22; color: white; text-align: center;
       padding: 10px 0; font-size: 11px;
       font-family: 'Oswald', sans-serif; letter-spacing: 1.5px;
       font-weight: 400;
