--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
     
     <div style="background: #fdfcf9; padding: 30px; border-radius: 20px; border-top: 5px solid #c98a2e; border-bottom: 5px solid #c98a2e; margin-bottom: 30px; box-sizing: border-box;">
       <h3 style="font-size: 22px; color: #0c2340; margin-top: 0; margin-bottom: 20px; font-weight: 800; display: flex; align-items: center; gap: 10px;">
-        🚀 <span style="letter-spacing: -0.5px;">From Late Starter to Elite Performer</span>
+        🚀 <span style="letter-spacing: -0.5px;">A Late Start, Built Through Structure and Discipline</span>
       </h3>
       <div style="font-size: 16.5px; line-height: 1.8; color: #2d3748; text-align: justify; word-break: keep-all;">
         <p style="margin-bottom: 15px;">
