--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
 
     <div style="text-align: justify; word-break: keep-all;">
       <p style="font-size: 18px; margin-bottom: 20px; line-height: 1.8; color: #2d3748;">
-        <span style="font-weight: 900; font-size: 22px; color: #0c2340; border-bottom: 3px solid #cbd5e0; padding-bottom: 2px;">Joshua Hong</span> (b. 2007) is a <b>Mexican–Korean</b> golfer currently competing for the <b>University of Texas at San Antonio (UTSA)</b> in <b>NCAA Division I</b>.
+        <span style="font-weight: 900; font-size: 22px; color: #0c2340; border-bottom: 3px solid #cbd5e0; padding-bottom: 2px;">Joshua Hong</span> (b. 2007) is a <b>Korean-Mexican</b> golfer currently competing for the <b>University of Texas at San Antonio (UTSA)</b> in <b>NCAA Division I</b>.
       </p>
       
       <p style="font-size: 16.5px; margin-bottom: 20px; line-height: 1.8; color: #4a5568;">
@@ -399,7 +399,7 @@
           </tr>
           <tr style="border-bottom: 1px solid #e2e8f0;">
             <td style="padding: 12px 0; color: #718096; font-weight: 600;">Nationality</td>
-            <td style="padding: 12px 0; text-align: right; font-weight: 800; color: #1a73e8;">Mexican–Korean (Dual)</td>
+            <td style="padding: 12px 0; text-align: right; font-weight: 800; color: #1a73e8;">Korean-Mexican (Dual)</td>
           </tr>
           <tr style="border-bottom: 1px solid #e2e8f0;">
             <td style="padding: 12px 0; color: #718096; font-weight: 600;">Languages</td>
