--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
 
 
       <div style="display: flex; justify-content: center; gap: 10px; flex-wrap: wrap; border-top: 1px solid #f1f1f1; padding-top: 25px; margin-bottom: 30px;">
-        <span style="background: #000; padding: 6px 14px; border-radius: 20px; font-size: 11px; color: #fff; font-weight: 700; letter-spacing: 0.5px;">#ProV1x</span>
+        <span style="background: #000; padding: 6px 14px; border-radius: 20px; font-size: 11px; color: #fff; font-weight: 700; letter-spacing: 0.5px;">#ProV1</span>
         <span style="background: #f8f9fa; padding: 6px 14px; border-radius: 20px; font-size: 11px; color: #718096; font-weight: 700; border: 1px solid #edf2f7;">#VokeyDesign</span>
         <span style="background: #f8f9fa; padding: 6px 14px; border-radius: 20px; font-size: 11px; color: #718096; font-weight: 700; border: 1px solid #edf2f7;">#ScottyCameron</span>
         <span style="background: #f8f9fa; padding: 6px 14px; border-radius: 20px; font-size: 11px; color: #718096; font-weight: 700; border: 1px solid #edf2f7;">#TeamTitleist</span>
