--- a/junior-career.html
+++ b/junior-career.html
@@ -439,15 +439,15 @@
       <h3 style="margin: 0; color: #1b5e20; font-size: 18px; letter-spacing: 1px; text-transform: uppercase; font-weight: 900;">Junior Career Gallery (16 Photos)</h3>
     </div>
 
-    <div style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 12px;">
+     <div style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 12px;">
       <img src="https://lh3.googleusercontent.com/d/1kUFqUexNjY3lvhMw7rPsEmTMgVsvrGbR" onclick="popupJrGallery(0)" style="width:100%; height:120px; object-fit:cover; object-position:top; border-radius:8px; cursor:pointer; transition: transform 0.2s; box-shadow: 0 2px 5px rgba(0,0,0,0.1);" onmouseover="this.style.transform='scale(1.03)'" onmouseout="this.style.transform='scale(1)'">
       <img src="https://lh3.googleusercontent.com/d/1IqCMgvk7V8AuhkJhJnGqYaV39tvOllUM" onclick="popupJrGallery(1)" style="width:100%; height:120px; object-fit:cover; object-position:center 15%; border-radius:8px; cursor:pointer; transition: transform 0.2s; box-shadow: 0 2px 5px rgba(0,0,0,0.1);" onmouseover="this.style.transform='scale(1.03)'" onmouseout="this.style.transform='scale(1)'">
       <img src="https://lh3.googleusercontent.com/d/1FJJwsIL3C1NEdU4dJeb6smfxQd0a0ouP" onclick="popupJrGallery(2)" style="width:100%; height:120px; object-fit:cover; object-position:center 55%; border-radius:8px; cursor:pointer; transition: transform 0.2s; box-shadow: 0 2px 5px rgba(0,0,0,0.1);" onmouseover="this.style.transform='scale(1.03)'" onmouseout="this.style.transform='scale(1)'">
-      <img src="https://lh3.googleusercontent.com/d/1GxkG7pgeWsiGe-EfFjy2BV7IoiRvbuPt" onclick="popupJrGallery(3)" style="width:100%; height:120px; object-fit:cover; object-position:top; border-radius:8px; cursor:pointer; transition: transform 0.2s;" onmouseover="this.style.transform='scale(1.03)'" onmouseout="this.style.transform='scale(1)'">
+      <img src="https://lh3.googleusercontent.com/d/11_jXXuy-vjwHs-QvBAdBPOFqV4ss4FpV" onclick="popupJrGallery(3)" style="width:100%; height:120px; object-fit:cover; object-position:center 55%; border-radius:8px; cursor:pointer; transition: transform 0.2s;" onmouseover="this.style.transform='scale(1.03)'" onmouseout="this.style.transform='scale(1)'">
       <img src="https://lh3.googleusercontent.com/d/1wQUkMMPZRWKAcV3s7bH3lXIUHO7KQcPU" onclick="popupJrGallery(4)" style="width:100%; height:120px; object-fit:cover; object-position:center 30%; border-radius:8px; cursor:pointer;">
       <img src="https://lh3.googleusercontent.com/d/1CPl_yA8fN5tptbunyMGaOqo71THzl82z" onclick="popupJrGallery(5)" style="width:100%; height:120px; object-fit:cover; border-radius:8px; cursor:pointer;">
       <img src="https://lh3.googleusercontent.com/d/1aR2s2b2Az_tsV0UoRIPE0V9dj_SY05Nc" onclick="popupJrGallery(6)" style="width:100%; height:120px; object-fit:cover; border-radius:8px; cursor:pointer;">
-      <img src="https://lh3.googleusercontent.com/d/11_jXXuy-vjwHs-QvBAdBPOFqV4ss4FpV" onclick="popupJrGallery(7)" style="width:100%; height:120px; object-fit:cover; border-radius:8px; cursor:pointer;">
+      <img src="https://lh3.googleusercontent.com/d/1fVzAzv6aAfSrUkSV-q42TILbEelkAWiQ" onclick="popupJrGallery(7)" style="width:100%; height:120px; object-fit:cover; border-radius:8px; cursor:pointer;">
       <img src="https://lh3.googleusercontent.com/d/1o4GgblC9pMcZSQaBhRXonEvxG_CzFfAH" onclick="popupJrGallery(8)" style="width:100%; height:120px; object-fit:cover; object-position:top; border-radius:8px; cursor:pointer;">
       <img src="https://lh3.googleusercontent.com/d/1KZXxeONuu3xPdiWUtmvofSgC4Zqz2Hk_" onclick="popupJrGallery(9)" style="width:100%; height:120px; object-fit:cover; border-radius:8px; cursor:pointer;">
       <img src="https://lh3.googleusercontent.com/d/1pjez52n31-EtRUIzEi5SROgefsmGSvdo" onclick="popupJrGallery(10)" style="width:100%; height:120px; object-fit:cover; object-position:center 30%; border-radius:8px; cursor:pointer;">
@@ -462,9 +462,9 @@
   <script>
     const jrImages = [
       "https://lh3.googleusercontent.com/d/1kUFqUexNjY3lvhMw7rPsEmTMgVsvrGbR", "https://lh3.googleusercontent.com/d/1IqCMgvk7V8AuhkJhJnGqYaV39tvOllUM",
-      "https://lh3.googleusercontent.com/d/1FJJwsIL3C1NEdU4dJeb6smfxQd0a0ouP", "https://lh3.googleusercontent.com/d/1GxkG7pgeWsiGe-EfFjy2BV7IoiRvbuPt",
+      "https://lh3.googleusercontent.com/d/1FJJwsIL3C1NEdU4dJeb6smfxQd0a0ouP", "https://lh3.googleusercontent.com/d/11_jXXuy-vjwHs-QvBAdBPOFqV4ss4FpV",
       "https://lh3.googleusercontent.com/d/1wQUkMMPZRWKAcV3s7bH3lXIUHO7KQcPU", "https://lh3.googleusercontent.com/d/1CPl_yA8fN5tptbunyMGaOqo71THzl82z",
-      "https://lh3.googleusercontent.com/d/1aR2s2b2Az_tsV0UoRIPE0V9dj_SY05Nc", "https://lh3.googleusercontent.com/d/11_jXXuy-vjwHs-QvBAdBPOFqV4ss4FpV",
+      "https://lh3.googleusercontent.com/d/1aR2s2b2Az_tsV0UoRIPE0V9dj_SY05Nc", "https://lh3.googleusercontent.com/d/1fVzAzv6aAfSrUkSV-q42TILbEelkAWiQ",
       "https://lh3.googleusercontent.com/d/1o4GgblC9pMcZSQaBhRXonEvxG_CzFfAH", "https://lh3.googleusercontent.com/d/1KZXxeONuu3xPdiWUtmvofSgC4Zqz2Hk_",
       "https://lh3.googleusercontent.com/d/1pjez52n31-EtRUIzEi5SROgefsmGSvdo", "https://lh3.googleusercontent.com/d/1_pCv0hofMD4NffVsKXF-_9QfY_hqG_mC",
       "https://lh3.googleusercontent.com/d/1Qc_Pv8gsFBae-bMk3Eudo5EnguKnP8Mg", "https://lh3.googleusercontent.com/d/1yk8kSpHTCxGa725r_2eUEcoRmMgLvi2V",
