--- a/news-media.html
+++ b/news-media.html
@@ -174,21 +174,42 @@
 
 
   
-<div style="font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; width: 100%; color: #2c3e50; line-height: 1.8; max-width: 900px; margin: auto; box-sizing: border-box; padding: 0 10px;">
-  <div style="text-align: center; margin-bottom: 25px; padding-top: 40px;">
-    <h1 style="font-size: 48px; font-weight: 900; color: #0c2340; margin: 0; letter-spacing: -1px; text-transform: uppercase;">NEWS & MEDIA</h1>
-    <p style="font-size: 16px; color: #666; margin: 5px 0 0 0; font-weight: 500; letter-spacing: 1px;">
-      Official News and Interviews
+<div style="font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; width: 100%; color: #2c3e50; line-height: 1.6; max-width: 900px; margin: auto; box-sizing: border-box; padding: 0 15px;">
+  
+  <div style="text-align: center; margin-bottom: 50px; padding-top: 50px;">
+    <div style="display: inline-block; margin-bottom: 10px;">
+      <svg width="32" height="32" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M19 3H5C3.89543 3 3 3.89543 3 5V19C3 20.1046 3.89543 21 5 21H19C20.1046 21 21 20.1046 21 19V5C21 3.89543 20.1046 3 19 3Z" stroke="#0c2340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+        <path d="M7 7H17" stroke="#806600" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+        <path d="M7 11H17" stroke="#806600" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+        <path d="M7 15H11" stroke="#0c2340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+      </svg>
+    </div>
+    <h1 style="font-size: 30px; font-weight: 800; color: #0c2340; margin: 5px 0 0 0; letter-spacing: 1.5px; text-transform: uppercase;">NEWS & MEDIA</h1>
+    <p style="font-size: 13px; color: #888; margin: 8px 0 0 0; font-weight: 500; letter-spacing: 0.5px; text-transform: uppercase;">
+      뉴스 및 언론 보도 / Noticias y Prensa
     </p>
   </div>
-</div>
 
-<div style="font-family: 'Segoe UI', Arial, sans-serif; max-width: 850px; width: 100%; margin: auto; padding: 20px; color: #333; background-color: #ffffff; box-sizing: border-box;">
-
-  <div style="border-bottom: 3px solid #0c2340; padding-bottom: 15px; margin-bottom: 40px;">
-    <h2 style="margin: 0; color: #0c2340; font-size: 26px; letter-spacing: 0.5px;">📰 MEDIA COVERAGE & INTERVIEWS</h2>
-    <p style="margin: 10px 0 0; color: #666; font-size: 15px;">Featured Interviews, Official News, and Video Highlights</p>
+  <div style="background-color: #ffffff; box-sizing: border-box;">
+    <div style="border-bottom: 2px solid #0c2340; padding-bottom: 15px; margin-bottom: 35px; display: flex; align-items: flex-end;">
+      <div style="margin-right: 12px; margin-bottom: 3px;">
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M12 1a3 3 0 0 0-3 3v8a3 3 0 0 0 6 0V4a3 3 0 0 0-3-3z" fill="#0c2340"/>
+          <path d="M19 10v2a7 7 0 0 1-14 0v-2" stroke="#806600" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+          <line x1="12" y1="19" x2="12" y2="23" stroke="#0c2340" stroke-width="2" stroke-linecap="round"/>
+          <line x1="8" y1="23" x2="16" y2="23" stroke="#0c2340" stroke-width="2" stroke-linecap="round"/>
+        </svg>
+      </div>
+      <div>
+        <h2 style="margin: 0; color: #0c2340; font-size: 19px; font-weight: 700; letter-spacing: -0.2px; text-transform: uppercase;">
+          MEDIA COVERAGE & INTERVIEWS
+        </h2>
+        <p style="margin: 4px 0 0; color: #888; font-size: 12px; font-weight: 400; letter-spacing: 0.2px;">인터뷰 및 공식 보도 / Entrevistas y Reportajes</p>
+      </div>
+    </div>
   </div>
+</div>
 
   <div style="margin-bottom: 50px;">
     <h3 style="color: #0c2340; font-size: 18px; margin-bottom: 20px; display: flex; align-items: center;">
