--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -177,9 +177,9 @@
 <div class="ncaa-hero-section" style="font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; width: 100%; max-width: 900px; margin: 0 auto 50px; padding: 0 15px; box-sizing: border-box;">
 
   <div style="text-align: center; margin-bottom: 35px; padding-top: 20px;">
-    <h1 style="font-size: clamp(36px, 8vw, 54px); font-weight: 900; color: #0c2340; margin: 0; letter-spacing: -1.5px; text-transform: uppercase; line-height: 1.1;">
-      NCAA STATS
-    </h1>
+    <h1 style="font-size: 34px; font-weight: 900; color: #0c2340; margin: 0; letter-spacing: -1.5px; text-transform: uppercase; line-height: 1.1;">
+  NCAA STATS
+</h1>
     <div style="display: flex; align-items: center; justify-content: center; gap: 10px; margin-top: 10px;">
       <div style="height: 2px; width: 30px; background: #c98a2e;"></div>
       <p style="font-size: 15px; color: #666; margin: 0; font-weight: 600; letter-spacing: 0.5px; text-transform: uppercase;">
