--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -301,8 +301,9 @@
               <div style="font-weight: 600; font-size: 13px; color: #e74c3c;">Jan 22, 2026</div>
               <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Round 1: The Canyons Course (Par 72)</div>
               <div style="font-size: 12px; color: #7f8c8d;">TPC San Antonio </div>
-<button type="button" 
-        onclick="document.getElementById('scorecard-modal').style.display='flex'"
+
+              <button type="button" 
+        onclick="gtag('event', 'view_scorecard', {'event_category': 'Engagement', 'event_label': 'Cancun Qualifying R1'}); document.getElementById('scorecard-modal').style.display='flex'"
         style="cursor: pointer; display: inline-flex; align-items: center; margin-top: 8px; padding: 5px 12px; background: #ffffff; color: #0c2340; font-family: inherit; font-size: 11px; font-weight: 800; border-radius: 6px; border: 1.5px solid #0c2340; transition: all 0.2s; box-shadow: 0 2px 4px rgba(0,0,0,0.05);">
   <span style="margin-right: 5px;">📊</span> VIEW SCORECARD
 </button>
