--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -266,22 +266,29 @@
     }
   </style>
 
- <div style="border-bottom: 2px solid #0c2340; padding-bottom: 20px; margin-bottom: 40px; text-align: center;">
+
+<div style="border-bottom: 2px solid #0c2340; padding-bottom: 20px; margin-bottom: 40px; text-align: center;">
     <h1 style="margin: 0; color: #0c2340; font-size: 26px; letter-spacing: 2px; font-weight: 900; text-transform: uppercase;">
       On-going Tournament
     </h1>
-  </div>
+</div>
 
-  <div class="live-event-card">
+<div class="live-event-card">
     <div style="padding: 20px 25px; display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap; gap: 10px;">
       <div style="display: flex; align-items: center; gap: 12px;">
-        <span style="background: #e74c3c; color: white; padding: 4px 14px; border-radius: 50px; font-size: 10px; font-weight: 900; letter-spacing: 1px; display: flex; align-items: center; gap: 6px;">
+        <span style="background: #f39c12; color: white; padding: 4px 14px; border-radius: 50px; font-size: 10px; font-weight: 900; letter-spacing: 1px; display: flex; align-items: center; gap: 6px;">
           <span style="width: 8px; height: 8px; background: white; border-radius: 50%; animation: pulse 1.5s infinite;"></span>
-          IN PROGRESS
+          SCHEDULE DELAYED
         </span>
         <h2 style="color: #0c2340; margin: 0; font-size: 22px; font-weight: 800;">Compadres Collegiate (UTRGV) Qualifying</h2>
       </div>
-      <div style="font-size: 12px; color: #95a5a6; font-weight: 600; text-transform: uppercase; letter-spacing: 1px;">Last Updated: Jan 23, 2026</div>
+      <div style="font-size: 12px; color: #95a5a6; font-weight: 600; text-transform: uppercase; letter-spacing: 1px;">Last Updated: Jan 26, 2026</div>
+    </div>
+
+    <div style="margin: 0 25px 15px 25px; padding: 12px 15px; background: #fff9eb; border-left: 4px solid #f39c12; border-radius: 4px;">
+      <p style="margin: 0; font-size: 13px; color: #7e5109; font-weight: 700; line-height: 1.5;">
+        ⚠️ NOTICE: Schedule adjusted to Wed/Thu due to winter storm and course closure. Rounds are subject to change based on weather conditions.
+      </p>
     </div>
 
     <div style="border-radius: 0 0 15px 15px; overflow: hidden; border-top: 1px solid #edf2f7;">
@@ -303,23 +310,24 @@
               <div style="font-size: 12px; color: #7f8c8d;">TPC San Antonio </div>
 
               <button type="button" 
-        onclick="gtag('event', 'view_scorecard', {'event_category': 'Engagement', 'event_label': 'Cancun Qualifying R1'}); document.getElementById('scorecard-modal').style.display='flex'"
-        style="cursor: pointer; display: inline-flex; align-items: center; margin-top: 8px; padding: 5px 12px; background: #ffffff; color: #0c2340; font-family: inherit; font-size: 11px; font-weight: 800; border-radius: 6px; border: 1.5px solid #0c2340; transition: all 0.2s; box-shadow: 0 2px 4px rgba(0,0,0,0.05);">
-  <span style="margin-right: 5px;">📊</span> VIEW SCORECARD
-</button>
+                onclick="gtag('event', 'view_scorecard', {'event_category': 'Engagement', 'event_label': 'Cancun Qualifying R1'}); document.getElementById('scorecard-modal').style.display='flex'"
+                style="cursor: pointer; display: inline-flex; align-items: center; margin-top: 8px; padding: 5px 12px; background: #ffffff; color: #0c2340; font-family: inherit; font-size: 11px; font-weight: 800; border-radius: 6px; border: 1.5px solid #0c2340; transition: all 0.2s; box-shadow: 0 2px 4px rgba(0,0,0,0.05);">
+                <span style="margin-right: 5px;">📊</span> VIEW SCORECARD
+              </button>
 
-<div id="scorecard-modal" 
-     onclick="this.style.display='none'" 
-     style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.85); z-index: 9999; justify-content: center; align-items: center; padding: 20px; box-sizing: border-box;">
-  <div style="position: relative; max-width: 100%; max-height: 90%;">
-    <div style="color: white; text-align: right; font-size: 12px; margin-bottom: 10px; font-weight: 600;">CLOSE [X]</div>
-    <img src="https://raw.githubusercontent.com/joshuahayoung/lab/main/images/qualify%201%20cancun.jpg" 
-         style="max-width: 100%; max-height: 80vh; border-radius: 8px; box-shadow: 0 0 30px rgba(0,0,0,0.5); border: 3px solid white;">
-    <div style="color: white; text-align: center; margin-top: 15px; font-size: 14px; font-weight: 700;">
-      Cancun Collegiate Qualifying - Round 1 Scorecard
-    </div>
-  </div>
-</div>
+              <div id="scorecard-modal" 
+                onclick="this.style.display='none'" 
+                style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.85); z-index: 9999; justify-content: center; align-items: center; padding: 20px; box-sizing: border-box;">
+                <div style="position: relative; max-width: 100%; max-height: 90%;">
+                  <div style="color: white; text-align: right; font-size: 12px; margin-bottom: 10px; font-weight: 600;">CLOSE [X]</div>
+                  <img src="https://raw.githubusercontent.com/joshuahayoung/lab/main/images/qualify%201%20cancun.jpg" 
+                    style="max-width: 100%; max-height: 80vh; border-radius: 8px; box-shadow: 0 0 30px rgba(0,0,0,0.5); border: 3px solid white;">
+                  <div style="color: white; text-align: center; margin-top: 15px; font-size: 14px; font-weight: 700;">
+                    Cancun Collegiate Qualifying - Round 1 Scorecard
+                  </div>
+                </div>
+              </div>
+
               <div class="mobile-status-bar">
                 <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value under-par">68</span></div>
                 <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value under-par">-4</span></div>
@@ -351,30 +359,30 @@
           </tr>
           <tr>
             <td class="col-left">
-              <div style="font-weight: 600; font-size: 13px;">Jan 26, 2026</div>
+              <div style="font-weight: 600; font-size: 13px; color: #f39c12;">Jan 28, 2026 (TBD)</div>
               <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Round 3: The Canyons Course (Par 72)</div>
               <div style="font-size: 12px; color: #7f8c8d;">TPC San Antonio </div>
               <div class="mobile-status-bar">
-                <div class="ms-item" style="border:none;"><span class="ms-label">STATUS</span><span class="ms-value scheduled-text">Scheduled</span></div>
+                <div class="ms-item" style="border:none;"><span class="ms-label">STATUS</span><span class="ms-value" style="color:#f39c12;">Delayed</span></div>
               </div>
             </td>
             <td class="hide-mobile" style="color: #bdc3c7;">-</td>
             <td class="hide-mobile" style="color: #bdc3c7;">-</td>
-            <td class="hide-mobile scheduled-text">Scheduled</td>
+            <td class="hide-mobile" style="font-weight: 700; color: #f39c12;">Delayed</td>
             <td class="hide-mobile" style="color: #bdc3c7;">-</td>
           </tr>
           <tr>
             <td class="col-left">
-              <div style="font-weight: 600; font-size: 13px;">Jan 27, 2026</div>
+              <div style="font-weight: 600; font-size: 13px; color: #f39c12;">Jan 29, 2026 (TBD)</div>
               <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Round 4: The Oaks Course (Par 72)</div>
               <div style="font-size: 12px; color: #7f8c8d;">TPC San Antonio </div>
               <div class="mobile-status-bar">
-                <div class="ms-item" style="border:none;"><span class="ms-label">STATUS</span><span class="ms-value scheduled-text">Scheduled</span></div>
+                <div class="ms-item" style="border:none;"><span class="ms-label">STATUS</span><span class="ms-value" style="color:#f39c12;">Delayed</span></div>
               </div>
             </td>
             <td class="hide-mobile" style="color: #bdc3c7;">-</td>
             <td class="hide-mobile" style="color: #bdc3c7;">-</td>
-            <td class="hide-mobile scheduled-text">Scheduled</td>
+            <td class="hide-mobile" style="font-weight: 700; color: #f39c12;">Delayed</td>
             <td class="hide-mobile" style="color: #bdc3c7;">-</td>
           </tr>
         </tbody>
@@ -398,7 +406,6 @@
         </div>
       </div>
     </div>
-  </div>
 </div>
 
 <style>
