--- a/index.html
+++ b/index.html
@@ -207,42 +207,37 @@
 
 
 <div style="max-width: 900px; margin: 0 auto 30px; padding: 0 15px; box-sizing: border-box;">
-  <div style="background: #ffffff; border: 2px solid #0c2340; border-radius: 12px; padding: 15px 20px; display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap; gap: 15px; box-shadow: 0 10px 25px rgba(12,35,64,0.08);">
+  <div style="background: #ffffff; border: 1.5px solid #0c2340; border-radius: 8px; padding: 12px 18px; display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap; gap: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.05);">
     
-    <div style="display: flex; align-items: center; gap: 12px;">
-      <span style="background: #e74c3c; color: white; padding: 4px 12px; border-radius: 50px; font-size: 10px; font-weight: 900; letter-spacing: 1px; display: flex; align-items: center; gap: 6px;">
-        <span style="width: 7px; height: 7px; background: white; border-radius: 50%; animation: pulse 1.5s infinite;"></span>
-        IN PROGRESS
+    <div style="display: flex; align-items: center; gap: 10px;">
+      <span style="background: #94a3b8; color: white; padding: 3px 10px; border-radius: 4px; font-size: 9px; font-weight: 800; letter-spacing: 0.5px; text-transform: uppercase;">
+        Rescheduled
       </span>
-      <div style="color: #0c2340; font-weight: 800; font-size: 14px; letter-spacing: -0.2px;">
-        Compadres Collegiate (UTRGV) Qualifying
+      <div style="color: #0c2340; font-weight: 700; font-size: 13px;">
+        Compadres Collegiate Qualifying (Oaks)
       </div>
     </div>
 
-    <div style="display: flex; align-items: center; gap: 20px;">
-      <div style="text-align: center;">
-        <span style="display: block; font-size: 9px; color: #95a5a6; font-weight: 800;">R1-R2-R3-R4, Par</span>
-        <span style="font-size: 16px; font-weight: 900; color: #e74c3c;">68-69 <span style="color: #e74c3c;">(-7)</span></span>
+    <div style="display: flex; align-items: center; gap: 15px;">
+      <div style="text-align: left;">
+        <span style="display: block; font-size: 8px; color: #94a3b8; font-weight: 700; text-transform: uppercase;">R1-R2 Status</span>
+        <span style="font-size: 14px; font-weight: 800; color: #0c2340;">68-69 <span style="color: #64748b; font-size: 12px;">(-7)</span></span>
       </div>
-      <div style="width: 1px; height: 25px; background: #eee;"></div>
-      <div style="text-align: center;">
-        <span style="display: block; font-size: 9px; color: #95a5a6; font-weight: 800;">RANK</span>
-        <span style="font-size: 16px; font-weight: 900; color: #0c2340;">1</span>
+      <div style="width: 1px; height: 20px; background: #e2e8f0;"></div>
+      <div style="text-align: left;">
+        <span style="display: block; font-size: 8px; color: #94a3b8; font-weight: 700; text-transform: uppercase;">POS</span>
+        <span style="font-size: 14px; font-weight: 800; color: #0c2340;">1</span>
       </div>
     </div>
 
-    <a href="ncaa-stats.html" style="text-decoration: none; background: #0c2340; color: white; padding: 8px 16px; border-radius: 6px; font-size: 11px; font-weight: 800; transition: all 0.2s; display: flex; align-items: center; gap: 5px;">
-      MORE INFO <span>&rarr;</span>
+    <a href="ncaa-stats.html" style="text-decoration: none; color: #0c2340; font-size: 11px; font-weight: 800; border-bottom: 1.5px solid #0c2340; padding-bottom: 2px; transition: all 0.2s;">
+      VIEW STATUS UPDATE &rarr;
     </a>
   </div>
 </div>
 
 <style>
-  @keyframes pulse {
-    0% { opacity: 1; transform: scale(1); }
-    50% { opacity: 0.2; transform: scale(0.8); }
-    100% { opacity: 1; transform: scale(1); }
-  }
+  /* 애니메이션은 시선을 너무 끌 수 있어 삭제하거나 아주 미세하게만 유지하는 것이 '무미건조' 원칙에 맞습니다. */
 </style>
 
 
